--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -17,4 +17,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run Unit Tests
-        run: go test ./..
+        run: go test ./...
