--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -13,8 +13,11 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')
+    # if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')
     steps:
       - uses: actions/checkout@v2
       - name: Run Unit Tests
-        run: go test ./...
+        run: 
+        - docker pull redis
+        - docker run --name redis-test-instance -p 6379:6379 -d redis
+        - go test ./...
