--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,7 @@ services :
     ports:
       - "8080:8080"
 
-    depends_on : 
-      - redis
-
   redis :
-    image : "redis:6.2.3"
-    command : "docker run --name redis-test-instance -d redis" 
+    image : "redis"    
     ports:
-    - "6379:6379"
+      - "6379:6379"
