feature (dockerize) : make code cleaner

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services :
   server : 
     build :
       context : .
-      dockerfile : Dockerfile
+      dockerfile : docker/Dockerfile
 
     command : ["go" , "run" , "."]
 
