--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,11 +9,11 @@ RUN go mod download
 
 COPY . .
 # Build the Go app
-RUN go build -o ./out/go-sample-app .
+RUN go build -o ./out/technical-test-golang .
 
 
 # This container exposes port 8080 to the outside world
 EXPOSE 8080
 
 # Run the binary program produced by `go install`
-CMD ["./out/go-sample-app"]
+CMD ["./out/technical-test-golang"]
